@@ -7,8 +7,8 @@ repositories {
 }
 
 dependencies {
+    implementation project(':core')
     compileOnly 'org.jetbrains:annotations:21.0.1'
-    implementation 'org.ow2.asm:asm:9.2'
 }
 
 java {
@@ -20,7 +20,5 @@ java {
 }
 
 compileJava {
-    options.compilerArgs
-        << "--enable-preview"
-        << "--add-modules=jdk.incubator.foreign"
+    options.compilerArgs << "--enable-preview"
 }
